  * fsck: Now works in bare repositories. Checks location log information,
    and file contents. Does not check that numcopies is satisfied, as
    .gitattributes information about numcopies is not available in a bare
    repository.
  * unused, dropunused: Now work in bare repositories.
  * Removed the setkey command, and added a setcontent command with a more
    useful interface.

 -- Joey Hess <joeyh@debian.org>  Thu, 27 Oct 2011 13:58:53 -0400

git-annex (3.20111025) unstable; urgency=low

  * A remote can have a annexUrl configured, that is used by git-annex
    instead of its usual url. (Similar to pushUrl.)
  * migrate: Copy url logs for keys when migrating.
  * git-annex-shell: GIT_ANNEX_SHELL_READONLY and GIT_ANNEX_SHELL_LIMITED
    environment variables can be set to limit what commands can be run.
    This is used by gitolite's new git-annex support!

 -- Joey Hess <joeyh@debian.org>  Tue, 25 Oct 2011 13:03:08 -0700

git-annex (3.20111011) unstable; urgency=low

  * This version of git-annex only works with git 1.7.7 and newer.
    The breakage with old versions is subtle, and affects the
    annex.numcopies settings in .gitattributes, so be sure to upgrade git
    to 1.7.7. (Debian package now depends on that version.)
  * Don't pass absolute paths to git show-attr, as it started following
    symlinks when that's done in 1.7.7. Instead, use relative paths,
    which show-attr only handles 100% correctly in 1.7.7. Closes: #645046
  * Fix referring to remotes by uuid.
  * New or changed repository descriptions in uuid.log now have a timestamp,
    which is used to ensure the newest description is used when the uuid.log
    has been merged.
  * Note that older versions of git-annex will display the timestamp as part
    of the repository description, which is ugly but otherwise harmless.
  * Add timestamps to trust.log and remote.log too.
  * git-annex-shell: Added the --uuid option.