@@ -15,6 +15,8 @@ git-annex (3.20111026) UNRELEASED; urgency=low
   * unused, dropunused: Now work in bare repositories.
   * Removed the setkey command, and added a setcontent command with a more
     useful interface.
+  * The fromkey command now takes the key as its first parameter. The --key
+    option is no longer used.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 27 Oct 2011 13:58:53 -0400
 
